tests/rpm-pkgs/gdbm-1.20-2.fc35/output-exp@symbiotic/scan-results.err
Error: SYMBIOTIC_WARNING:
gdbm-1.20/tests/num2word.c:366: error: memory error: out of bound pointer
gdbm-1.20/tests/num2word.c:366: note: call stack: function main (=2, =0)
gdbm-1.20/tests/num2word.c:366: note: Additional Info: address: 0:94292290841456
gdbm-1.20/tests/num2word.c:366: note: Additional Info: pointing to: none
#  364|   
#  365|         num = xstrtoul (arg, &p);
#  366|->       if (*p == 0)
#  367|   	range_add (num, 1);
#  368|         else if (*p == ':')
